--- a/jhofrel/index.html
+++ b/jhofrel/index.html
@@ -6,114 +6,119 @@
     <title>Jhofrel</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="icon" href="/imagenes/jhofrel.png" type="image/png">
+    <link rel="icon" href="./imagenes/jhofrel.png" type="image/png">
 </head>
 <body>
     <header>
-        <img src="/imagenes/jhofrel.png" alt="Logo" class="logo"> 
-        <h1>Jhofrel</h1>
+        <img src="./imagenes/jhofrel.png" alt="Logo" class="logo"> 
+        <h1 class="jhofrel">Jhofrel</h1>
+        <div class="header">
+            <h2 class="conocenos">Conocenos</h2>
+            <h2 class="tipo">Tipo De Ropa</h2>
+        </div>
+       
     </header>
     
     <main>
         <section class="products">
             <div class="product-card">
-                <img src="/imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
+                <img src="./imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
                 <h2>Pantaloneta de niño</h2>
                 <p>Descripción breve del producto.</p>
                 <button>15.999</button>
             </div>
             <div class="product-card">
-                <img src="/imagenes/pantaloneta.jpg" alt="Producto 2" class="product-image"> 
+                <img src="./imagenes/pantaloneta.jpg" alt="Producto 2" class="product-image"> 
                 <h2>Pantaloneta de caballero</h2>
                 <p>Descripción breve del producto.</p>
                 <button>15.999</button>
             </div>
             <div class="product-card">
-                <img src="/imagenes/sudadera.jpg" alt="Producto 3" class="product-image">
+                <img src="./imagenes/sudadera.jpg" alt="Producto 3" class="product-image">
                 <h2>Sudadera de mujer</h2>
                 <p>Descripción breve del producto.</p>
                 <button>15.999</button>
             </div>
             <div class="product-card">
-                <img src="/imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
+                <img src="./imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
                 <h2>Pantaloneta de niño</h2>
                 <p>Descripción breve del producto.</p>
                 <button>15.999</button>
             </div>
             <div class="product-card">
-                <img src="/imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
+                <img src="./imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
                 <h2>Pantaloneta de niño</h2>
                 <p>Descripción breve del producto.</p>
                 <button>15.999</button>
             </div>
             <div class="product-card">
-                <img src="/imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
+                <img src="./imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
                 <h2>Pantaloneta de niño</h2>
                 <p>Descripción breve del producto.</p>
                 <button>15.999</button>
             </div>
             <div class="product-card">
-                <img src="/imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
+                <img src="./imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
                 <h2>Pantaloneta de niño</h2>
                 <p>Descripción breve del producto.</p>
                 <button>15.999</button>
             </div>
             <div class="product-card">
-                <img src="/imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
+                <img src="./imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
                 <h2>Pantaloneta de niño</h2>
                 <p>Descripción breve del producto.</p>
                 <button>15.999</button>
             </div>
             <div class="product-card">
-                <img src="/imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
+                <img src="./imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
                 <h2>Pantaloneta de niño</h2>
                 <p>Descripción breve del producto.</p>
                 <button>15.999</button>
             </div>
             <div class="product-card">
-                <img src="/imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
+                <img src="./imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
                 <h2>Pantaloneta de niño</h2>
                 <p>Descripción breve del producto.</p>
                 <button>15.999</button>
             </div>
             <div class="product-card">
-                <img src="/imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
+                <img src="./imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
                 <h2>Pantaloneta de niño</h2>
                 <p>Descripción breve del producto.</p>
                 <button>15.999</button>
             </div>
             <div class="product-card">
-                <img src="/imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
+                <img src="./imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
                 <h2>Pantaloneta de niño</h2>
                 <p>Descripción breve del producto.</p>
                 <button>15.999</button>
             </div>
             <div class="product-card">
-                <img src="/imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
+                <img src="./imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
                 <h2>Pantaloneta de niño</h2>
                 <p>Descripción breve del producto.</p>
                 <button>15.999</button>
             </div>
             <div class="product-card">
-                <img src="/imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
+                <img src="./imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
                 <h2>Pantaloneta de niño</h2>
                 <p>Descripción breve del producto.</p>
                 <button>15.999</button>
             </div>
             <div class="product-card">
-                <img src="/imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
+                <img src="./imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
                 <h2>Pantaloneta de niño</h2>
                 <p>Descripción breve del producto.</p>
                 <button>15.999</button>
             </div>
             <div class="product-card">
-                <img src="/imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
+                <img src="./imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
                 <h2>Pantaloneta de niño</h2>
                 <p>Descripción breve del producto.</p>
                 <button>15.999</button>
             </div>
             <div class="product-card">
-                <img src="/imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
+                <img src="./imagenes/pantaloneta.jpg" alt="Producto 1" class="product-image"> 
                 <h2>Pantaloneta de niño</h2>
                 <p>Descripción breve del producto.</p>
                 <button>15.999</button>
@@ -125,6 +130,7 @@
         <a href="https://wa.me/573208853974" class="whatsapp-icon" target="_blank">
             <i class="fab fa-whatsapp"></i>
         </a>
+        <p class="copi">&copy; 2024 Jhofrel. Todos los derechos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
