--- a/jhofrel/index.html
+++ b/jhofrel/index.html
@@ -13,8 +13,15 @@
         <img src="./imagenes/jhofrel.png" alt="Logo" class="logo"> 
         <h1 class="jhofrel">Jhofrel</h1>
         <div class="header">
-            <h2 class="conocenos">Conocenos</h2>
-            <h2 class="tipo">Tipo De Ropa</h2>
+            <a href="conocenos.html">
+                <h2 class="conocenos">Conocenos</h2>
+            </a>
+            <a href="tiporopa.html">
+                <h2 class="tipo">Tipo</h2>
+            </a>
+            <a href="index.html">
+                <h2 class="Prendas">Prendas</h2>
+            </a>
         </div>
        
     </header>
