--- a/tiporopa.html
+++ b/tiporopa.html
@@ -6,11 +6,11 @@
     <title>Jhofrel</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="icon" href="./imagenes/jhofrel.png" type="image/png">
+    <link rel="icon" href="jhofrel.png" type="image/png">
 </head>
 <body>
     <header>
-        <img src="./imagenes/jhofrel.png" alt="Logo" class="logo"> 
+        <img src="jhofrel.png" alt="Logo" class="logo"> 
         <h1 class="jhofrel">Jhofrel</h1>
         <div class="header">
             <a href="conocenos.html">
@@ -30,23 +30,23 @@
         <h2>Tipos de Ropa</h2>
         <div class="tipo-ropa-grid">
             <div class="tipo-ropa-item">
-                <img src="./imagenes/sudadera.jpg" alt="Sudaderas">
+                <img src="sudadera.jpg" alt="Sudaderas">
                 <p><strong>Sudaderas:</strong> Niño, Dama, Caballero</p>
             </div>
             <div class="tipo-ropa-item">
-                <img src="./imagenes/conjunto.jpg" alt="Conjuntos">
+                <img src="conjunto.jpg" alt="Conjuntos">
                 <p><strong>Conjuntos:</strong> Niño, Niña, Dama, Caballero</p>
             </div>
             <div class="tipo-ropa-item">
-                <img src="./imagenes/pantaloneta.jpg" alt="Pantalonetas">
+                <img src="pantaloneta.jpg" alt="Pantalonetas">
                 <p><strong>Pantalonetas:</strong> Dama, Caballero</p>
             </div>
             <div class="tipo-ropa-item">
-                <img src="./imagenes/pijama.png" alt="Pijamas">
+                <img src="pijama.png" alt="Pijamas">
                 <p><strong>Pijamas:</strong> Dama</p>
             </div>
             <div class="tipo-ropa-item">
-                <img src="./imagenes/camiseta.png" alt="Camisetas">
+                <img src="camiseta.png" alt="Camisetas">
                 <p><strong>Camisetas:</strong> Niño, Caballero</p>
             </div>
         </div>
