--- a/conocenos.html
+++ b/conocenos.html
@@ -6,11 +6,11 @@
     <title>Jhofrel</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="icon" href="./imagenes/jhofrel.png" type="image/png">
+    <link rel="icon" href="jhofrel.png" type="image/png">
 </head>
 <body>
     <header>
-        <img src="./imagenes/jhofrel.png" alt="Logo" class="logo"> 
+        <img src="jhofrel.png" alt="Logo" class="logo"> 
         <h1 class="jhofrel">Jhofrel</h1>
         <div class="header">
             <a href="conocenos.html">
