--- a/index.html
+++ b/index.html
@@ -11,129 +11,96 @@
 </head>
 <body>
     <header>
-        <img src="jhofrel.png" alt="Logo" class="logo"> 
-        <h1 class="jhofrel">Jhofrel</h1>
-        <div class="header">
-            <a href="conocenos.html">
-                <h2 class="conocenos">Conocenos</h2>
-            </a>
-            <a href="tiporopa.html">
-                <h2 class="tipo">Tipo</h2>
-            </a>
-            <a href="index.html">
-                <h2 class="Prendas">Prendas</h2>
-            </a>
+        <div class="container d-flex align-items-center justify-content-between">
+            <img src="jhofrel.png" alt="Logo" class="logo"> 
+            <h1 class="jhofrel">Jhofrel</h1>
+            <div class="header">
+                <a href="conocenos.html" class="nav-link">
+                    <h2 class="conocenos">Conocenos</h2>
+                </a>
+                <a href="tiporopa.html" class="nav-link">
+                    <h2 class="tipo">Tipo</h2>
+                </a>
+                <a href="index.html" class="nav-link">
+                    <h2 class="Prendas">Prendas</h2>
+                </a>
+            </div>
         </div>
-       
     </header>
     
     <main>
-        <section class="products">
-            <div class="product-card">
-                <img src="pantaloneta.jpg" alt="Producto 1" class="product-image"> 
-                <h2>Pantaloneta de niño</h2>
-                <p>Descripción breve del producto.</p>
-                <button>15.999</button>
-            </div>
-            <div class="product-card">
-                <img src="pantaloneta.jpg" alt="Producto 2" class="product-image"> 
-                <h2>Pantaloneta de caballero</h2>
-                <p>Descripción breve del producto.</p>
-                <button>15.999</button>
-            </div>
-            <div class="product-card">
-                <img src="sudadera.jpg" alt="Producto 3" class="product-image">
-                <h2>Sudadera de mujer</h2>
-                <p>Descripción breve del producto.</p>
-                <button>15.999</button>
-            </div>
-            <div class="product-card">
-                <img src="pantaloneta.jpg" alt="Producto 1" class="product-image"> 
-                <h2>Pantaloneta de niño</h2>
-                <p>Descripción breve del producto.</p>
-                <button>15.999</button>
-            </div>
-            <div class="product-card">
-                <img src="pantaloneta.jpg" alt="Producto 1" class="product-image"> 
-                <h2>Pantaloneta de niño</h2>
-                <p>Descripción breve del producto.</p>
-                <button>15.999</button>
-            </div>
-            <div class="product-card">
-                <img src="pantaloneta.jpg" alt="Producto 1" class="product-image"> 
-                <p>Descripción breve del producto.</p>
-                <button>15.999</button>
-            </div>
-            <div class="product-card">
-                <img src="pantaloneta.jpg" alt="Producto 1" class="product-image"> 
-                <h2>Pantaloneta de niño</h2>
-                <p>Descripción breve del producto.</p>
-                <button>15.999</button>
-            </div>
-            <div class="product-card">
-                <img src="pantaloneta.jpg" alt="Producto 1" class="product-image"> 
-                <h2>Pantaloneta de niño</h2>
-                <p>Descripción breve del producto.</p>
-                <button>15.999</button>
-            </div>
-            <div class="product-card">
-                <img src="pantaloneta.jpg" alt="Producto 1" class="product-image"> 
-                <h2>Pantaloneta de niño</h2>
-                <p>Descripción breve del producto.</p>
-                <button>15.999</button>
-            </div>
-            <div class="product-card">
-                <img src="pantaloneta.jpg" alt="Producto 1" class="product-image"> 
-                <h2>Pantaloneta de niño</h2>
-                <p>Descripción breve del producto.</p>
-                <button>15.999</button>
-            </div>
-            <div class="product-card">
-                <img src="pantaloneta.jpg" alt="Producto 1" class="product-image"> 
-                <h2>Pantaloneta de niño</h2>
-                <p>Descripción breve del producto.</p>
-                <button>15.999</button>
-            </div>
-            <div class="product-card">
-                <img src="pantaloneta.jpg" alt="Producto 1" class="product-image"> 
-                <h2>Pantaloneta de niño</h2>
-                <p>Descripción breve del producto.</p>
-                <button>15.999</button>
-            </div>
-            <div class="product-card">
-                <img src="pantaloneta.jpg" alt="Producto 1" class="product-image"> 
-                <h2>Pantaloneta de niño</h2>
-                <p>Descripción breve del producto.</p>
-                <button>15.999</button>
-            </div>
-            <div class="product-card">
-                <img src="pantaloneta.jpg" alt="Producto 1" class="product-image"> 
-                <h2>Pantaloneta de niño</h2>
-                <p>Descripción breve del producto.</p>
-                <button>15.999</button>
-            </div>
-            <div class="product-card">
-                <img src="pantaloneta.jpg" alt="Producto 1" class="product-image"> 
-                <h2>Pantaloneta de niño</h2>
-                <p>Descripción breve del producto.</p>
-                <button>15.999</button>
-            </div>
-            <div class="product-card">
-                <img src="pantaloneta.jpg" alt="Producto 1" class="product-image"> 
-                <h2>Pantaloneta de niño</h2>
-                <p>Descripción breve del producto.</p>
-                <button>15.999</button>
-            </div>
-            <div class="product-card">
-                <img src="pantaloneta.jpg" alt="Producto 1" class="product-image"> 
-                <h2>Pantaloneta de niño</h2>
-                <p>Descripción breve del producto.</p>
-                <button>15.999</button>
+        <section class="products container">
+            <div class="row">
+                <div class="col-md-4 mb-4">
+                    <div class="product-card">
+                        <img src="pantaloneta.jpg" alt="Producto 1" class="product-image"> 
+                        <h2>Pantaloneta de niño</h2>
+                        <p>Descripción breve del producto.</p>
+                        <button>15.999</button>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="product-card">
+                        <img src="pantaloneta.jpg" alt="Producto 2" class="product-image"> 
+                        <h2>Pantaloneta de caballero</h2>
+                        <p>Descripción breve del producto.</p>
+                        <button>15.999</button>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="product-card">
+                        <img src="sudadera.jpg" alt="Producto 3" class="product-image">
+                        <h2>Sudadera de mujer</h2>
+                        <p>Descripción breve del producto.</p>
+                        <button>15.999</button>
+                    </div>
+                </div>
+                <!-- Repite las tarjetas de producto como desees -->
+                <div class="col-md-4 mb-4">
+                    <div class="product-card">
+                        <img src="pantaloneta.jpg" alt="Producto 1" class="product-image"> 
+                        <h2>Pantaloneta de niño</h2>
+                        <p>Descripción breve del producto.</p>
+                        <button>15.999</button>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="product-card">
+                        <img src="pantaloneta.jpg" alt="Producto 1" class="product-image"> 
+                        <h2>Pantaloneta de niño</h2>
+                        <p>Descripción breve del producto.</p>
+                        <button>15.999</button>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="product-card">
+                        <img src="pantaloneta.jpg" alt="Producto 1" class="product-image"> 
+                        <h2>Pantaloneta de niño</h2>
+                        <p>Descripción breve del producto.</p>
+                        <button>15.999</button>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="product-card">
+                        <img src="sudadera.jpg" alt="Producto 3" class="product-image">
+                        <h2>Sudadera de mujer</h2>
+                        <p>Descripción breve del producto.</p>
+                        <button>15.999</button>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="product-card">
+                        <img src="pantaloneta.jpg" alt="Producto 1" class="product-image"> 
+                        <h2>Pantaloneta de niño</h2>
+                        <p>Descripción breve del producto.</p>
+                        <button>15.999</button>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
 
-    <footer>
+    <footer class="text-center">
         <a href="https://wa.me/573208853974" class="whatsapp-icon" target="_blank">
             <i class="fab fa-whatsapp"></i>
         </a>
