--- a/conocenos.html
+++ b/conocenos.html
@@ -11,65 +11,48 @@
 </head>
 <body>
     <header>
-        <img src="jhofrel.png" alt="Logo" class="logo"> 
-        <h1 class="jhofrel">Jhofrel</h1>
-        <div class="header">
-            <a href="conocenos.html">
-            <h2 class="conocenos">Conocenos</h2>
-        </a>
-        <a href="tiporopa.html">
-            <h2 class="tipo">Tipo</h2>
-        </a>
-        <a href="index.html">
-            <h2 class="Prendas">Prendas</h2>
-        </a>
+        <div class="container d-flex align-items-center justify-content-between">
+            <img src="jhofrel.png" alt="Logo" class="logo"> 
+            <h1 class="jhofrel">Jhofrel</h1>
+            <div class="header">
+                <a href="conocenos.html" class="nav-link">
+                    <h2 class="conocenos">Conocenos</h2>
+                </a>
+                <a href="tiporopa.html" class="nav-link">
+                    <h2 class="tipo">Tipo</h2>
+                </a>
+                <a href="index.html" class="nav-link">
+                    <h2 class="Prendas">Prendas</h2>
+                </a>
+            </div>
         </div>
-       
     </header>
-    <section class="conocenos-section">
-        <h2>Conócenos</h2>
-        <p>En <strong>Jhofrel</strong>, ofrecemos ropa de vestir elegante y de alta calidad para todas las ocasiones. Nos dedicamos a brindar a nuestros clientes prendas que combinan estilo, comodidad y distinción. Desde trajes formales hasta conjuntos casuales de vestir, cada pieza es seleccionada cuidadosamente para ofrecerte lo mejor en moda. Ven a conocernos y descubre una experiencia única en ropa de vestir para hombres, mujeres y niños. ¡Viste con confianza y elegancia!</p>
-    </section>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <main class="container mt-5 pt-5">
+        <section class="conocenos-section">
+            <h2>Conócenos</h2>
+            <p>En <strong>Jhofrel</strong>, ofrecemos ropa de vestir elegante y de alta calidad para todas las ocasiones. Nos dedicamos a brindar a nuestros clientes prendas que combinan estilo, comodidad y distinción. Desde trajes formales hasta conjuntos casuales de vestir, cada pieza es seleccionada cuidadosamente para ofrecerte lo mejor en moda. Ven a conocernos y descubre una experiencia única en ropa de vestir para hombres, mujeres y niños. ¡Viste con confianza y elegancia!</p>
+        </section>
+    </main>
 
-    <footer class="social-footer">
+    <footer class="social-footer bg-light text-center py-3">
         <div class="social-icons">
-            <a href="https://wa.me/573208853974" target="_blank" class="social-icon whatsapp">
+            <a href="https://wa.me/573208853974" target="_blank" class="social-icon whatsapp mx-2">
                 <i class="fab fa-whatsapp"></i>
             </a>
-            <a href="https://web.facebook.com/jhofrel.confecciones.1?locale=es_LA" target="_blank" class="social-icon facebook">
+            <a href="https://web.facebook.com/jhofrel.confecciones.1?locale=es_LA" target="_blank" class="social-icon facebook mx-2">
                 <i class="fab fa-facebook-f"></i>
             </a>
-            <a href="https://www.instagram.com/tuPaginaDeInstagram" target="_blank" class="social-icon instagram">
+            <a href="https://www.instagram.com/tuPaginaDeInstagram" target="_blank" class="social-icon instagram mx-2">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a href="mailto:tuCorreo@gmail.com" target="_blank" class="social-icon gmail">
+            <a href="mailto:tuCorreo@gmail.com" target="_blank" class="social-icon gmail mx-2">
                 <i class="fas fa-envelope"></i>
             </a>
         </div>
-    </footer>
-        
-    <footer>
-        <a href="https://wa.me/573208853974" class="whatsapp-icon" target="_blank">
-            <i class="fab fa-whatsapp"></i>
-        </a>
         <p class="copi">&copy; 2024 Jhofrel. Todos los derechos reservados.</p>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
