--- a/conocenos.html
+++ b/conocenos.html
@@ -46,7 +46,7 @@
             <a href="https://www.instagram.com/tuPaginaDeInstagram" target="_blank" class="social-icon instagram mx-2">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a href="mailto:tuCorreo@gmail.com" target="_blank" class="social-icon gmail mx-2">
+            <a href="mailto:mjhon6811@gmail.com" target="_blank" class="social-icon gmail mx-2">
                 <i class="fas fa-envelope"></i>
             </a>
         </div>
