--- a/tiporopa.html
+++ b/tiporopa.html
@@ -1,76 +1,78 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jhofrel</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="icon" href="jhofrel.png" type="image/png">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+    <link rel="icon" href="jhofrel.png" type="image/png" />
+  </head>
+  <body>
     <header>
-        <div class="container d-flex align-items-center justify-content-between">
-            <img src="jhofrel.png" alt="Logo" class="logo"> 
-            <h1 class="jhofrel">Jhofrel</h1>
-            <div class="header">
-                <a href="conocenos.html" class="nav-link">
-                    <h2 class="conocenos">Conocenos</h2>
-                </a>
-                <a href="tiporopa.html" class="nav-link">
-                    <h2 class="tipo">Tipo</h2>
-                </a>
-                <a href="index.html" class="nav-link">
-                    <h2 class="Prendas">Prendas</h2>
-                </a>
-            </div>
+      <div class="container d-flex align-items-center justify-content-between">
+        <img src="jhofrel.png" alt="Logo" class="logo" />
+        <h1 class="jhofrel">Jhofrel</h1>
+        <div class="header">
+          <a href="conocenos.html" class="nav-link">
+            <h2 class="conocenos">Conocenos</h2>
+          </a>
+          <a href="tiporopa.html" class="nav-link">
+            <h2 class="tipo">Tipo</h2>
+          </a>
+          <a href="index.html" class="nav-link">
+            <h2 class="Prendas">Prendas</h2>
+          </a>
         </div>
+      </div>
     </header>
 
-    <section class="tipo-ropa-section">
-        <h2>Tipos de Ropa</h2>
-        <div class="tipo-ropa-grid">
-            <div class="tipo-ropa-item">
-                <div class="product-card">
-                    <img src="sudadera.jpg" alt="Sudaderas">
-                    <p><strong>Sudaderas:</strong> Niño, Dama, Caballero</p>
-                </div>
-            </div>
-            <div class="tipo-ropa-item">
-                <div class="product-card">
-                    <img src="conjunto.jpg" alt="Conjuntos">
-                    <p><strong>Conjuntos:</strong> Niño, Niña, Dama, Caballero</p>
-                </div>
-            </div>
-            <div class="tipo-ropa-item">
-                <div class="product-card">
-                    <img src="pantaloneta.jpg" alt="Pantalonetas">
-                    <p><strong>Pantalonetas:</strong> Dama, Caballero</p>
-                </div>
-            </div>
-            <div class="tipo-ropa-item">
-                <div class="product-card">
-                    <img src="pijama.png" alt="Pijamas">
-                    <p><strong>Pijamas:</strong> Dama</p>
-                </div>
-            </div>
-            <div class="tipo-ropa-item">
-                <div class="product-card">
-                    <img src="camiseta.png" alt="Camisetas">
-                    <p><strong>Camisetas:</strong> Niño, Caballero</p>
-                </div>
-            </div>
+    <section class="products container">
+      <div class="row">
+        <div class="col-md-4 mb-4">
+          <div class="product-card">
+            <img src="sudadera.jpg" alt="Sudaderas" />
+            <p><strong>Sudaderas:</strong> Niño, Dama, Caballero</p>
+          </div>
         </div>
+        <div class="col-md-4 mb-4">
+          <div class="product-card">
+            <img src="conjunto.jpg" alt="Conjuntos" />
+            <p><strong>Conjuntos:</strong> Niño, Niña, Dama, Caballero</p>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="product-card">
+            <img src="pantaloneta.jpg" alt="Pantalonetas" />
+            <p><strong>Pantalonetas:</strong> Dama, Caballero</p>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="product-card">
+            <img src="camiseta.png" alt="Camisetas" />
+            <p><strong>Camisetas:</strong> Niño, Caballero</p>
+          </div>
+        </div>
+      </div>
     </section>
-
     <footer>
-        <a href="https://wa.me/573208853974" class="whatsapp-icon" target="_blank">
-            <i class="fab fa-whatsapp"></i>
-        </a>
-        <p class="copi">&copy; 2024 Jhofrel. Todos los derechos reservados.</p>
+      <a
+        href="https://wa.me/573208853974"
+        class="whatsapp-icon"
+        target="_blank"
+      >
+        <i class="fab fa-whatsapp"></i>
+      </a>
+      <p class="copi">&copy; 2024 Jhofrel. Todos los derechos reservados.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
